# Simple-Process-Manager

./: .gitignore  CMakeLists.txt  README.md  console_helpers.h  main.cpp  processExplorer_helpers.h
MenuManager/: MenuManager.cpp  MenuManager.h
ProcessExplorer/: ProcessExplorer_helpers.cpp  console_helpers.cpp  processExplorer_main.cpp
